--- a/.github/workflows/Pull request validation.yml
+++ b/.github/workflows/Pull request validation.yml
@@ -19,43 +19,23 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
     
-    - name: Cache SonarCloud packages
-        uses: actions/cache@v1
-        with:
-          path: ~\sonar\cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache SonarCloud scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v1
-        with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-      - name: Install SonarCloud scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
-        run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool install dotnet-sonarscanner --tool-path .\.sonar\scanner
-    
-    - name: Initialize the Sonar scanning process
-      shell: powershell
-      run: .\.sonar\scanner\dotnet-sonarscanner begin /k:"TryAtSoftware_Randomizer" /o:"tryatsoftware" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: -Dsonar.organization=tryatsoftware -Dsonar.projectKey=TryAtSoftware_Randomizer
+   
     - name: Restore dependencies
       run: dotnet restore
     - name: Build the solution
       run: dotnet build --no-restore
     - name: Test the solution
       run: dotnet test --no-build --verbosity normal --collect="Code coverage"
-    
-    - name: Finalize the Sonar scanning process
-      shell: powershell
-      run: .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
     
 
