--- a/.github/workflows/Pull request validation.yml
+++ b/.github/workflows/Pull request validation.yml
@@ -18,18 +18,12 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.11
-    
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        args: -Dsonar.organization=tryatsoftware -Dsonar.projectKey=TryAtSoftware_Randomizer
+   
+    - name: Install SonarScanner as a global tool
+      run: dotnet tool install --global dotnet-sonarscanner
+      
+    - name: Start analyzation with SonarCloud
+      run: dotnet-sonarscanner begin /k:"TryAtSoftware_Randomizer" /o:"tryatsoftware" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
    
     - name: Restore dependencies
       run: dotnet restore
@@ -38,4 +32,5 @@ jobs:
     - name: Test the solution
       run: dotnet test --no-build --verbosity normal --collect="Code coverage"
     
-
+    - name: Finalize analyzation with SonarCloud
+      run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
