--- a/.github/workflows/Pull request validation.yml
+++ b/.github/workflows/Pull request validation.yml
@@ -24,6 +24,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: -Dsonar.organization=tryatsoftware -Dsonar.projectKey=TryAtSoftware_Randomizer
     - name: Install SonarScanner as a global tool
       run: dotnet tool install --global dotnet-sonarscanner
       
