Standardized the workflows

--- a/.github/workflows/Core validation.yml
+++ b/.github/workflows/Core validation.yml
@@ -1,9 +1,10 @@
-name: Pull request validation
+name: Core validation
 
 on:
+  push:
+    branches: [main]
   pull_request:
-    branches: [dev]
-    types: [opened, synchronize, reopened]
+    branches: [main]
 
 jobs:
   build:
