--- a/tests/TryAtSoftware.Randomizer.Core.Tests/TryAtSoftware.Randomizer.Core.Tests.csproj
+++ b/tests/TryAtSoftware.Randomizer.Core.Tests/TryAtSoftware.Randomizer.Core.Tests.csproj
@@ -19,4 +19,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\TryAtSoftware.Randomizer.Core\TryAtSoftware.Randomizer.Core.csproj" />
+    </ItemGroup>
+
 </Project>
