--- a/.github/workflows/Core validation.yml
+++ b/.github/workflows/Core validation.yml
@@ -38,10 +38,10 @@ jobs:
         restore-keys: ${{ runner.os }}-sonar-scanner
     - name: Install SonarCloud scanner
       if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-      run: dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
       
     - name: Start analyzation with SonarCloud
-      run: .\.sonar\scanner\dotnet-sonarscanner begin /k:"TryAtSoftware_Randomizer" /o:"tryatsoftware" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+      run: ./.sonar/scanner/dotnet-sonarscanner begin /k:"TryAtSoftware_Randomizer" /o:"tryatsoftware" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
 
     - name: Restore dependencies
       run: dotnet restore
@@ -51,4 +51,4 @@ jobs:
       run: dotnet test --no-build --verbosity normal --collect "Code coverage"
     
     - name: Finalize analyzation with SonarCloud
-      run: .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+      run: ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
