--- a/.github/workflows/Core validation.yml
+++ b/.github/workflows/Core validation.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Build the solution
       run: dotnet build --no-restore --configuration "${{ env.CONFIGURATION }}"
     - name: Test the solution
-      run: dotnet test --no-build --configuration "${{ env.CONFIGURATION }}" --collect "Code coverage"
+      run: dotnet test --no-build --configuration "${{ env.CONFIGURATION }}" --collect "XPlat Code Coverage"
     
     - name: Finalize analyzation with SonarCloud
       run: ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
