--- a/.github/workflows/Core validation.yml
+++ b/.github/workflows/Core validation.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Validate core functionality
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -49,7 +49,7 @@ jobs:
     - name: Build the solution
       run: dotnet build --no-restore --configuration "${{ env.CONFIGURATION }}"
     - name: Test the solution
-      run: dotnet test --no-build --configuration "${{ env.CONFIGURATION }}" --collect "XPlat Code Coverage"
+      run: dotnet test --no-build --configuration "${{ env.CONFIGURATION }}" --collect "Code Coverage"
     
     - name: Finalize analyzation with SonarCloud
       run: ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
