--- a/.github/workflows/Core validation.yml
+++ b/.github/workflows/Core validation.yml
@@ -19,10 +19,15 @@ jobs:
     - uses: actions/checkout@v2
       with:
           fetch-depth: 0
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
 
     - name: Cache SonarCloud packages
       uses: actions/cache@v1
