--- a/.github/workflows/Core validation.yml
+++ b/.github/workflows/Core validation.yml
@@ -47,7 +47,7 @@ jobs:
       run: dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
       
     - name: Start analyzation with SonarCloud
-      run: ./.sonar/scanner/dotnet-sonarscanner begin /k:"TryAtSoftware_Randomizer" /o:"tryatsoftware" /d:sonar.cs.opencover.reportsPaths="../../tests/*/coverage.opencover.xml" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+      run: ./.sonar/scanner/dotnet-sonarscanner begin /k:"TryAtSoftware_Randomizer" /o:"tryatsoftware" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
 
     - name: Restore dependencies
       run: dotnet restore
