--- a/.github/workflows/Core validation.yml
+++ b/.github/workflows/Core validation.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Validate core functionality
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
