--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -2,6 +2,12 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <PackageId>TryAtSoftware.Randomizer</PackageId>
+        <Title>TryAtSoftware.Randomizer</Title>
+        <Authors>Tony Troeff</Authors>
+        <Description>This package should be used to make your object initialization process in tests cleaner and easier than ever before.</Description>
+        <PackageLicenseUrl>https://github.com/TryAtSoftware/Randomizer/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/TryAtSoftware/Randomizer</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
