--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -2,7 +2,15 @@
     
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <NuspecFile>.\TryAtSoftware.Randomizer.Core.nuspec</NuspecFile>
+        <PackageId>TryAtSoftware.Randomizer</PackageId>
+        <Version>1.0.1</Version>
+        <Authors>Tony Troeff</Authors>
+        <RepositoryUrl>https://github.com/TryAtSoftware/Randomizer</RepositoryUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <Description>This package should be used to make your object initialization process in tests cleaner and easier than ever before.</Description>
+        <Copyright>Copyright (c) .NET Foundation and contributors 2008-2021</Copyright>
+        <PackageTags>tryatsoftware randomization random</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
