Constructor parameters can be randomized with ease.

--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -3,20 +3,18 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <PackageId>TryAtSoftware.Randomizer</PackageId>
-        <Version>1.0.2</Version>
+        <Version>1.0.3-alpha.1</Version>
         <Authors>Tony Troeff</Authors>
         <RepositoryUrl>https://github.com/TryAtSoftware/Randomizer</RepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <Description>This package should be used to make your object initialization process in tests cleaner and easier than ever before.</Description>
-        <Copyright>Copyright (c) .NET Foundation and contributors 2008-2021</Copyright>
+        <Copyright>Copyright (c) .NET Foundation and contributors 2008-2022</Copyright>
         <PackageTags>tryatsoftware randomization random</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="JetBrains.Annotations" Version="2021.1.0">
-          <PrivateAssets>all</PrivateAssets>
-      </PackageReference>
+      <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" PrivateAssets="all" />
     </ItemGroup>
 
 </Project>
