--- a/tests/TryAtSoftware.Randomizer.Core.Tests/TryAtSoftware.Randomizer.Core.Tests.csproj
+++ b/tests/TryAtSoftware.Randomizer.Core.Tests/TryAtSoftware.Randomizer.Core.Tests.csproj
@@ -16,6 +16,10 @@
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.36.1.44192">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <PrivateAssets>all</PrivateAssets>
