--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -14,11 +14,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" PrivateAssets="all" />
-      <PackageReference Include="SonarAnalyzer.CSharp" Version="8.36.1.44192">
+      <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" PrivateAssets="all" />
+      <PackageReference Include="SonarAnalyzer.CSharp" Version="8.40.0.48530">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="TryAtSoftware.Extensions.Reflection" Version="1.0.0-alpha.7" />
     </ItemGroup>
 
 </Project>
