--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -9,7 +9,7 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <Description>This package should be used to make your object initialization process in tests cleaner and easier than ever before.</Description>
-        <Copyright>Copyright (c) .NET Foundation and contributors 2008-2022</Copyright>
+        <Copyright>Copyright (c) Tony Troeff</Copyright>
         <PackageTags>tryatsoftware randomization random</PackageTags>
     </PropertyGroup>
 
