--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
@@ -14,12 +14,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" PrivateAssets="all" />
-      <PackageReference Include="SonarAnalyzer.CSharp" Version="8.40.0.48530">
+      <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" PrivateAssets="all" />
+      <PackageReference Include="SonarAnalyzer.CSharp" Version="8.51.0.59060">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="TryAtSoftware.Extensions.Reflection" Version="1.0.0-alpha.8" />
+      <PackageReference Include="TryAtSoftware.Extensions.Reflection" Version="1.1.0" />
     </ItemGroup>
 
 </Project>
