--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -2,6 +2,8 @@
     
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+		<LangVersion>latest</LangVersion>
+		
         <PackageId>TryAtSoftware.Randomizer</PackageId>
         <Version>1.0.3</Version>
         <Authors>Tony Troeff</Authors>
