--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -21,7 +21,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="TryAtSoftware.Extensions.Reflection" Version="1.1.0" />
+      <PackageReference Include="TryAtSoftware.Extensions.Reflection" Version="1.1.1-alpha.1" />
     </ItemGroup>
 
 </Project>
