--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>latest</LangVersion>
+        <Nullable>enable</Nullable>
 		
         <PackageId>TryAtSoftware.Randomizer</PackageId>
         <Version>1.0.4-alpha.2</Version>
@@ -16,7 +17,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" PrivateAssets="all" />
       <PackageReference Include="SonarAnalyzer.CSharp" Version="8.51.0.59060">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
