--- a/tests/TryAtSoftware.Randomizer.Core.Tests/TryAtSoftware.Randomizer.Core.Tests.csproj
+++ b/tests/TryAtSoftware.Randomizer.Core.Tests/TryAtSoftware.Randomizer.Core.Tests.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <IsPackable>false</IsPackable>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,9 +12,6 @@
         </PackageReference>
         <PackageReference Include="coverlet.msbuild" Version="3.2.0">
           <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="JetBrains.Annotations" Version="2022.3.1">
-            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
         <PackageReference Include="SonarAnalyzer.CSharp" Version="8.51.0.59060">
