--- a/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
+++ b/src/TryAtSoftware.Randomizer.Core/TryAtSoftware.Randomizer.Core.csproj
@@ -17,11 +17,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="SonarAnalyzer.CSharp" Version="8.51.0.59060">
+      <PackageReference Include="SonarAnalyzer.CSharp" Version="9.3.0.71466">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="TryAtSoftware.Extensions.Reflection" Version="1.1.1-alpha.2" />
+      <PackageReference Include="TryAtSoftware.Extensions.Reflection" Version="1.1.1" />
     </ItemGroup>
 
 </Project>
