--- a/.github/workflows/Core validation.yml
+++ b/.github/workflows/Core validation.yml
@@ -25,10 +25,11 @@ jobs:
       with:
         dotnet-version: 7.x
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Set up JDK 21
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.11
+        distribution: microsoft
+        java-version: 21
 
     - name: Cache SonarCloud packages
       uses: actions/cache@v1
